# nicp

./: CMakeLists.txt
charts/: charts.py
dataset/: seq1.txt
nicp/nicp/: homogeneousvector4f.h  informationmatrix.h
nicp_depth_camera_tracking_code/: CMakeLists.txt  do_associations_txt.py  nicp_depth_camera_tracking.cpp
nicp_depth_camera_tracking_code/data/: associations.txt  groundtruth.txt  new_groundtrouth.txt  nicp.conf  nicp_odometry.txt
